6.4 done