@@ -6,19 +6,17 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 
-import static org.example.ListDemo.getIndependentListWithoutGivenPerson;
-import static org.example.ListDemo.getNamesakesList;
+import static org.example.ListDemo.*;
 import static org.example.ListDemoTest.HumansTestData.*;
 import static org.testng.Assert.assertEquals;
-import static org.testng.AssertJUnit.assertFalse;
+import static org.testng.Assert.assertTrue;
 import static org.testng.AssertJUnit.assertNotSame;
 
 public class ListDemoTest {
     static class HumansTestData {
+
         public final static Human LucyEarl = new Human(
             new FullName("Lucy", "", "Earl"),
             LocalDate.of(1998, 3, 12),
@@ -43,7 +41,6 @@ public class ListDemoTest {
             176,
             82
         );
-
         public final static Human OlgaMerson = new Human(
             new FullName("Olga", "Igorevich", "Meson"),
             LocalDate.of(1976, 12, 6),
@@ -61,6 +58,7 @@ public class ListDemoTest {
             179,
             79
         );
+
         public final static Human LucyBrown = new Human(
             new FullName("Lucy", "", "Brown"),
             LocalDate.of(1998, 3, 12),
@@ -69,7 +67,6 @@ public class ListDemoTest {
             175,
             65
         );
-
         public final static Human CyrillVirth = new Human(
             new FullName("Cyrill", "", "Virth"),
             LocalDate.of(1998, 3, 12),
@@ -78,6 +75,7 @@ public class ListDemoTest {
             180,
             90
         );
+
         public final static Human LucyGreen = new Human(
             new FullName("Lucy", "", "Green"),
             LocalDate.of(1998, 3, 12),
@@ -90,20 +88,20 @@ public class ListDemoTest {
 
     @Test(dataProvider = "getNamesakesList_Data")
     public static void getNamesakesList_Test(
-        List< Human > humans,
+        List<Human> humans,
         Human person,
-        List< Human > expectedList
+        List<Human> expectedList
     ) {
-        List< Human > actualList = getNamesakesList(humans, person);
+        List<Human> actualList = getNamesakesList(humans, person);
         assertEquals(actualList, expectedList);
     }
 
     @DataProvider
     public static Object[][] getNamesakesList_Data() {
-        List< Human > humanList = List.of(LucyEarl, LucyVirth, AlexandreMerson, JulieVirth, LucyBrown);
-        List< Human > expectedList1 = List.of(LucyVirth, JulieVirth);
-        List< Human > expectedList2 = List.of(AlexandreMerson);
-        List< Human > emptyList = new ArrayList<>(0);
+        List<Human> humanList = List.of(LucyEarl, LucyVirth, AlexandreMerson, JulieVirth, LucyBrown);
+        List<Human> expectedList1 = List.of(LucyVirth, JulieVirth);
+        List<Human> expectedList2 = List.of(AlexandreMerson);
+        List<Human> emptyList = new ArrayList<>(0);
 
         return new Object[][] {
             { humanList, CyrillVirth, expectedList1 },
@@ -120,11 +118,11 @@ public class ListDemoTest {
 
     @Test(dataProvider = "getIndependentListWithoutGivenPerson_PositiveCase_Data")
     public static void getIndependentListWithoutGivenPerson_PositiveCase_Test(
-        final List< Human > people,
+        final List<Human> people,
         final Human person,
-        final List< Human > expectedList
+        final List<Human> expectedList
     ) {
-        List< Human > actualList = getIndependentListWithoutGivenPerson(people, person);
+        List<Human> actualList = getIndependentListWithoutGivenPerson(people, person);
         assertEquals(actualList, expectedList);
         assertNotSame(
             people.get(people.indexOf(LucyBrown)), actualList.get(actualList.indexOf(LucyBrown)));
@@ -132,12 +130,12 @@ public class ListDemoTest {
 
     @DataProvider
     public static Object[][] getIndependentListWithoutGivenPerson_PositiveCase_Data() {
-        List< Human > initialList           = List.of(LucyEarl, LucyVirth, AlexandreMerson, JulieVirth, LucyBrown);
-        List< Human > initialListWithNull   = Arrays.asList(LucyEarl, null, AlexandreMerson, JulieVirth, LucyBrown);
-        List< Human > expectedList1         = List.of(LucyEarl, LucyVirth, JulieVirth, LucyBrown);
-        List< Human > expectedList1WithNull = Arrays.asList(LucyEarl, null, JulieVirth, LucyBrown);
-        List< Human > expectedList2         = List.of(LucyVirth, AlexandreMerson, JulieVirth, LucyBrown);
-        List< Human > expectedList2WithNull = Arrays.asList(null, AlexandreMerson, JulieVirth, LucyBrown);
+        List<Human> initialList = List.of(LucyEarl, LucyVirth, AlexandreMerson, JulieVirth, LucyBrown);
+        List<Human> initialListWithNull = Arrays.asList(LucyEarl, null, AlexandreMerson, JulieVirth, LucyBrown);
+        List<Human> expectedList1 = List.of(LucyEarl, LucyVirth, JulieVirth, LucyBrown);
+        List<Human> expectedList1WithNull = Arrays.asList(LucyEarl, null, JulieVirth, LucyBrown);
+        List<Human> expectedList2 = List.of(LucyVirth, AlexandreMerson, JulieVirth, LucyBrown);
+        List<Human> expectedList2WithNull = Arrays.asList(null, AlexandreMerson, JulieVirth, LucyBrown);
 
         return new Object[][] {
             { initialList, AlexandreMerson, expectedList1 },
@@ -149,4 +147,48 @@ public class ListDemoTest {
         };
     }
 
+    @Test(dataProvider = "getListOfSetsHavingEmptyIntersectionWithGivenSet_PositiveCase_Data")
+    public static void getListOfSetsHavingEmptyIntersectionWithGivenSet_PositiveCase_Test(
+        List<Set<Integer>> setList,
+        Set<Integer> givenSet,
+        List<Set<Integer>> expectedList
+    ) {
+        List<Set<Integer>> actualList = getListOfSetsHavingEmptyIntersectionWithGivenSet(setList, givenSet);
+        assertEquals(actualList, expectedList);
+    }
+
+    @DataProvider
+    public static Object[][] getListOfSetsHavingEmptyIntersectionWithGivenSet_PositiveCase_Data() {
+        Set<Integer> emptySet = new TreeSet<>();
+        Set<Integer> setA = new TreeSet<>(List.of(1, 2, 3));
+        Set<Integer> setB = new TreeSet<>(List.of(4, 5, 6));
+        Set<Integer> setC = new TreeSet<>(List.of(-1, 10, 7));
+
+        Set<Integer> setUnionBAndA = new TreeSet<>();
+        setUnionBAndA.addAll(setA);
+        setUnionBAndA.addAll(setB);
+
+        Set<Integer> setUnionCAndA = new TreeSet<>();
+        setUnionCAndA.addAll(setA);
+        setUnionCAndA.addAll(setC);
+
+        List<Set<Integer>> emptyList = new ArrayList<>(0);
+        List<Set<Integer>> listOfEmptySet = List.of(new TreeSet<>());
+        List<Set<Integer>> listOfGivenSetCopies = List.of(setA, setA, setA);
+        List<Set<Integer>> listOfSetsHavingEmptyIntersectionWithSetA = List.of(setB, setC, emptySet);
+        List<Set<Integer>> listContainsSetsThatIntersectsWithSetA = List.of(setB, setC, setUnionBAndA, setUnionCAndA, emptySet);
+
+        return new Object[][] {
+            { emptyList, setA, emptyList },
+            { listOfEmptySet, setA, listOfEmptySet },
+            { listOfGivenSetCopies, setA, emptyList },
+            { listOfGivenSetCopies, setA, emptyList },
+            { listOfSetsHavingEmptyIntersectionWithSetA, setA, listOfSetsHavingEmptyIntersectionWithSetA },
+            { listContainsSetsThatIntersectsWithSetA, setA, listOfSetsHavingEmptyIntersectionWithSetA },
+
+            { emptyList, emptySet, emptyList },
+            { listOfEmptySet, emptySet, listOfEmptySet },
+            { listContainsSetsThatIntersectsWithSetA, emptySet, listContainsSetsThatIntersectsWithSetA },
+        };
+    }
 }
